tests/good/misc/writeln-number.pas
program writeln_number;

begin
    WriteLn(123);
    WriteLn(9000000000)
end.
