tests/bad/undeclared-function.pas
program undeclared_function;

begin
    does_not_exist
end.
